bad/2020-07-06/15-16/22.1/build.err
run.c: In function ‘thank’:
run.c:9:21: error: request for member ‘c’ in something not a structure or union
     for (i=0; i<gist.c; i++){
                     ^
run.c:11:13: warning: comparison between pointer and integer
         if(m>"A" && m<"Z"){
             ^
run.c:11:22: warning: comparison between pointer and integer
         if(m>"A" && m<"Z"){
                      ^
run.c:16:9: error: expected ‘;’ before ‘}’ token
         }
         ^